// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanSummary renders summary 1`] = `
<React.Fragment>
  <h6
    className="Headline"
  >
    1,000
     emails for 
    $100 per month
  </h6>
</React.Fragment>
`;

exports[`PlanSummary renders summary for free plan 1`] = `
<React.Fragment>
  <h6
    className="Headline"
  >
    1,000
     emails for 
    Free
  </h6>
</React.Fragment>
`;

exports[`PlanSummary renders summary with custom plan 1`] = `
<React.Fragment>
  <h6
    className="Headline"
  >
    12,000
     emails for 
    $100 per year
  </h6>
</React.Fragment>
`;

exports[`PlanSummary renders summary with overages 1`] = `
<React.Fragment>
  <h6
    className="Headline"
  >
    1,000
     emails for 
    $100 per month
  </h6>
  <p>
    $
    0.01
     per thousand extra emails
  </p>
</React.Fragment>
`;
